bynkc/tests/fixtures/negative/154_param_as_function_nonfn/input.bynk
commons bad

fn call_an_int(x: Int) -> Int {
  x(5)
}
